ui/apps/plugins/portal/oxdriveclients/style.less
/**
 * This work is provided under the terms of the CREATIVE COMMONS PUBLIC
 * LICENSE. This work is protected by copyright and/or other applicable
 * law. Any use of the work other than as authorized under this license
 * or copyright law is prohibited.
 *
 * http://creativecommons.org/licenses/by-nc-sa/2.5/
 *
 * © 2012 Open-Xchange Inc., Tarrytown, NY, USA. info@open-xchange.com
 *
 * @author Alexander Quast <alexander.quast@open-xchange.com>
 */

.io-ox-sidepopup {
    .oxdrive {
        .teaser {
            clear: both;
        }
        .oxdrive-shop-image {
            display: inline-block;
        }
        .link {
            display: inline-block;
            vertical-align: middle;
            margin: 10px 10px 0 0;
            i {
                font-size: 20px;
                margin-right: 5px;
            }
        }
    }
}
.oxdrive {
    .message {
        h4 {
            margin-top: 0;
        }
    }
    .appicon {
        width: 72px;
        height: 72px;
        background-size: 72px 72px;
        float: left;
        margin-right: 10px;
        margin-bottom: 5px;
    }
    .link {
        margin-top: 10px;
        clear: both;
    }
    .oxdrive-shop-image {
        width: 135px;
        height: 40px;
        background-size: 135px 40px;

        &.android {
            width: 115px;
            background-size: 115px 40px;
        }
        &.mac_os {
            width: 165px;
            background-size: 165px 40px;
        }
    }
}

