Fixed icon size for OX Drive portal widget to prevent text overflow

--- a/ui/apps/plugins/portal/oxdriveclients/style.less
+++ b/ui/apps/plugins/portal/oxdriveclients/style.less
@@ -28,6 +28,11 @@
                 margin-right: 5px;
             }
         }
+        .appicon {
+            width: 72px;
+            height: 72px;
+            background-size: 72px 72px;
+        }
     }
 }
 .oxdrive {
@@ -37,9 +42,9 @@
         }
     }
     .appicon {
-        width: 72px;
-        height: 72px;
-        background-size: 72px 72px;
+        width: 40px;
+        height: 40px;
+        background-size: 40px;
         float: left;
         margin-right: 10px;
         margin-bottom: 5px;
